<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAddTaskList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/taskListColor"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/add_list"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAddListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibCloseListName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription"
                    android:padding="10dp"
                    android:src="@drawable/ic_cancel" />

                <EditText
                    android:id="@+id/etTaskListName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/hint_list_name"
                    android:inputType="text" />

                <ImageButton
                    android:id="@+id/ibDoneListName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription"
                    android:padding="10dp"
                    android:src="@drawable/ic_done" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/llTaskItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/taskListColor"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/llTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/taskListBgColor"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tvTaskListTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    tools:text="Title" />

                <ImageButton
                    android:id="@+id/ibEditListName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription"
                    android:padding="10dp"
                    android:src="@drawable/ic_edit" />

                <ImageButton
                    android:id="@+id/ibDeleteList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription"
                    android:padding="10dp"
                    android:src="@drawable/ic_delete_card" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDivider" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvEditTaskListName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="5dp"
                android:visibility="gone"
                app:cardCornerRadius="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ibCloseEditableView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription"
                        android:padding="10dp"
                        android:src="@drawable/ic_cancel" />

                    <EditText
                        android:id="@+id/etEditTaskListName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="@string/hint_list_name"
                        android:hint="@string/hint_list_name"
                        android:inputType="text" />

                    <ImageButton
                        android:id="@+id/ibDoneEditListName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription"
                        android:padding="10dp"
                        android:src="@drawable/ic_done" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCardList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="5dp"
                android:visibility="gone"
                app:cardCornerRadius="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ibCloseCardName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription"
                        android:padding="10dp"
                        android:src="@drawable/ic_cancel" />

                    <EditText
                        android:id="@+id/etCardName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="@string/hint_card_name"
                        android:hint="@string/hint_card_name"
                        android:inputType="text" />

                    <ImageButton
                        android:id="@+id/ibDoneCardName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription"
                        android:padding="10dp"
                        android:src="@drawable/ic_done" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvAddCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/taskListBgColor"
                android:elevation="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/action_add_card"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>